firstHeading and search box overlaps. Fix.

--- a/minit/main.css
+++ b/minit/main.css
@@ -206,7 +206,7 @@ body {
 }
 
 #firstHeading {
-	padding: 10px 3em 9px;
+	padding: 10px 22em 9px 3em;
 	border-bottom: 1px solid #AAA;
 }
 
